架构空岛战争

--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -1,12 +1,20 @@
 # 物品-后面为占比
+blocks:
+  - block: "15:0"
+    items:
+      - ""
 
 chests:
   - block: "54:0"
     items:
-      - "272:0-2-石剑&[-1x2,1:2]"
+      - "272:0-2-石剑"
+      - "5:0:8-3-木板"
+      - "1:0:8-3-石头"
+      - "258:0-1-铁斧"
       - "283:0-1-金剑"
       - "282:0-2-蘑菇煲"
       - "291:0-1-石锄"
+      - "384:0:8-2-附魔瓶"
       - "298:0-2-皮革头盔"
       - "299:0-2-皮革胸甲"
       - "300:0-2-皮革护腿"
@@ -18,7 +26,9 @@ chests:
       - "351:4-5-青金石"
       - "261:0-3-弓"
       - "262:0:10-2-箭"
-      - "325:1-2-牛奶桶"
+      - "325:8-2-水桶"
+      - "384:0:8-2-经验瓶"
+      - "325:10-2-岩浆桶"
       - "346:0-1-鱼竿"
       - "345:0-1-指南针"
       - "280:0-1-木棍"
