--- a/src/main/resources/room.yml
+++ b/src/main/resources/room.yml
@@ -17,12 +17,21 @@ victoryCmd: []
 defeatCmd: []
 
 floatSpawnPos: []
+ban-break: []
+can-break:
+  - "15"
+  - "14"
+  - "21"
+  - "16"
+  - "56"
+  - "129"
+round: 15
 
 roomStartMessage:
   - "&a■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
-  - "&f小游戏名称"
+  - "&f空岛战争"
   - "&e"
-  - "&e小游戏介绍"
+  - "&e收集物资，存活到最后！"
   - "&e"
   - "&a■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
 
