--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,12 @@
-name: Gamedemo
-main: org.sobadfish.skywars.GameDemoMain
+name: SkyWars
+main: org.sobadfish.skywars.SkyWarsMain
 version: 1.0.0
 api:
   - 1.0.11
   - 3.0.0
 author: sobadfish
 load: POSTWORLD
-description: "小游戏插件框架"
+description: "空岛战争小游戏"
 
 softdepend:
   - ScoreboardPlugin
