--- a/src/main/resources/team.yml
+++ b/src/main/resources/team.yml
@@ -1,8 +1,8 @@
 team:
-  - name: ""
+  - name: "红队"
     nameColor: "&c"
     blockWoolColor: "35:14"
-    canPvp: true
+    canPvp: false
     inventory:
       armor:
         - "298:0"
@@ -15,3 +15,19 @@ team:
       r: 255
       g: 0
       b: 0
+  - name: "蓝队"
+    nameColor: "&9"
+    blockWoolColor: "35:11"
+    canPvp: false
+    inventory:
+      armor:
+        - "298:0"
+        - "299:0"
+        - "300:0"
+        - "301:0"
+      inventory:
+        - "268:0"
+    rgb:
+      r: 0
+      g: 0
+      b: 255
