架构空岛战争

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
-title: "&f[&a小游戏&f]"
+title: "&f[&a空岛战争&f]"
 
-scoreboard-title: "&a小游戏"
+scoreboard-title: "&a空岛战争"
 
 # 是否保存玩家背包
 save-playerInventory:  true
