--- a/src/main/resources/team.yml
+++ b/src/main/resources/team.yml
@@ -1,33 +1,12 @@
 team:
-  - name: "红队"
+  - name: ""
     nameColor: "&c"
     blockWoolColor: "35:14"
-    canPvp: false
+    canPvp: true
     inventory:
-      armor:
-        - "298:0"
-        - "299:0"
-        - "300:0"
-        - "301:0"
-      inventory:
-        - "268:0"
+      armor: []
+      inventory: []
     rgb:
       r: 255
       g: 0
       b: 0
-  - name: "蓝队"
-    nameColor: "&9"
-    blockWoolColor: "35:11"
-    canPvp: false
-    inventory:
-      armor:
-        - "298:0"
-        - "299:0"
-        - "300:0"
-        - "301:0"
-      inventory:
-        - "268:0"
-    rgb:
-      r: 0
-      g: 0
-      b: 255
