--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -3,8 +3,8 @@ chests:
   - block: "54:0"
     items:
       - "272:0-2-石剑"
-      - "5:0:8-3-木板"
-      - "1:0:8-3-石头"
+      - "5:0:8-5-木板"
+      - "1:0:8-5-石头"
       - "258:0-1-铁斧"
       - "283:0-1-金剑"
       - "282:0-2-蘑菇煲"
@@ -18,6 +18,7 @@ chests:
       - "307:0-2-铁胸甲"
       - "308:0-2-铁护腿"
       - "309:0-2-铁靴子"
+      - "46:0-3-TNT"
       - "351:4-5-青金石"
       - "261:0-3-弓"
       - "262:0:10-2-箭"
@@ -39,5 +40,5 @@ chests:
       - "357:0:2-3-曲奇"
       - "360:0-4-西瓜"
       - "364:0-2-熟牛肉"
-      - "368:0-2-末影珍珠"
+      - "368:0-3-末影珍珠"
       - "260:2-5-苹果"
