增加 火球 TNT可投掷 秒人斧道具

--- a/src/main/resources/room.yml
+++ b/src/main/resources/room.yml
@@ -15,6 +15,11 @@ AutomaticNextRound: true
 victoryCmd: []
 defeatCmd: []
 resetTime: 120
+# TNT的伤害
+tntDamage: 8
+
+# TNT爆炸时间（秒）
+tntExplodeTime: 5
 floatSpawnPos: []
 ban-break:
   - "7"
