--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -1,9 +1,11 @@
 # 物品-后面为占比
 # 附魔写法 & 附魔id: 等级 如果加~ 则前面与后面随机等级
+# 要求必须写在物品后面 占比前面
+# 示例 物品ID:特殊值:数量&附魔id...-占比-名称
 chests:
   - block: "54:0"
     items:
-      - "272:0-2&9:1~2&11:2~3-石剑"
+      - "272:0&9:1~2&11:2~3-2-石剑"
       - "5:0:8-5-木板"
       - "1:0:8-5-石头"
       - "258:0-1-铁斧"
