--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.sobadfish</groupId>
     <artifactId>SkyWars</artifactId>
-    <version>1.1.3</version>
+    <version>1.1.4</version>
 
     <dependencies>
         <dependency>
@@ -22,7 +22,7 @@
             <artifactId>Nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath> ${project.basedir}/lib/Nukkit-PM1E.jar</systemPath>
+            <systemPath> ${project.basedir}/lib/Nukkit-PM1E-MOT-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.smallaswater.npc</groupId>
