--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.sobadfish</groupId>
     <artifactId>SkyWars</artifactId>
-    <version>1.1.6</version>
+    <version>1.1.7-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -86,6 +86,18 @@
             <groupId>com.smallaswater.tips</groupId>
             <artifactId>Tips</artifactId>
             <version>2.1.9</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.easecation</groupId>
+            <artifactId>Ghosty</artifactId>
+            <version>B20240115-MOT-C1-JAVA8</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.lanink</groupId>
+            <artifactId>MemoriesOfTime-GameCore</artifactId>
+            <version>1.6.12</version>
             <scope>provided</scope>
         </dependency>
 
