--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,10 @@ description: "空岛战争小游戏"
 
 softdepend:
   - ScoreboardPlugin
+  - Ghosty
+  - MemoriesOfTime-GameCore
 
 loadbefore:
   - ScoreboardPlugin
+  - Ghosty
+  - MemoriesOfTime-GameCore
