--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.sobadfish</groupId>
     <artifactId>SkyWars</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.8</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
