--- a/pom.xml
+++ b/pom.xml
@@ -7,26 +7,25 @@
     <groupId>org.sobadfish</groupId>
     <artifactId>SkyWars</artifactId>
     <version>1.1.8</version>
-
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <repositories>
-        <repository>
-            <id>opencollab-repo-release</id>
-            <url>https://repo.opencollab.dev/maven-releases/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
+        <!--        <repository>-->
+        <!--            <id>opencollab-repo-release</id>-->
+        <!--            <url>https://repo.opencollab.dev/maven-releases/</url>-->
+        <!--            <releases>-->
+        <!--                <enabled>true</enabled>-->
+        <!--            </releases>-->
+        <!--            <snapshots>-->
+        <!--                <enabled>false</enabled>-->
+        <!--            </snapshots>-->
+        <!--        </repository>-->
         <repository>
             <id>opencollab-repo-snapshot</id>
             <url>https://repo.opencollab.dev/maven-snapshots/</url>
@@ -45,11 +44,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.1</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>de.theamychan</groupId>
             <artifactId>ScoreboardAPI</artifactId>
@@ -62,44 +62,46 @@
             <artifactId>Nukkit</artifactId>
             <version>MOT-java8-SNAPSHOT</version>
             <scope>provided</scope>
+            <!--<systemPath> ${project.basedir}/lib/Nukkit-PM1E-MOT-SNAPSHOT.jar</systemPath>-->
         </dependency>
         <dependency>
-            <groupId>com.smallaswater</groupId>
+            <groupId>com.smallaswater.npc</groupId>
             <artifactId>RsNPC</artifactId>
-            <version>2.4.3</version>
-            <scope>provided</scope>
+            <version>2.2.3</version>
+            <scope>system</scope>
+            <systemPath> ${project.basedir}/lib/RsNPC-2.1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.smallaswater.autoupdata</groupId>
             <artifactId>AutoUpData</artifactId>
-            <version>1.3.0</version>
-            <scope>provided</scope>
+            <version>1.2.3</version>
+            <scope>system</scope>
+            <systemPath> ${project.basedir}/lib/AutoUpData_v1.2.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sakura</groupId>
             <artifactId>Sakura</artifactId>
             <version>1.0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Sakura-1.0.4-Release.jar</systemPath>
+            <systemPath> ${project.basedir}/lib/Sakura-1.0.4-Release.jar</systemPath>
         </dependency>
+
         <dependency>
             <groupId>com.smallaswater.tips</groupId>
             <artifactId>Tips</artifactId>
-            <version>2.1.9</version>
-            <scope>provided</scope>
+            <version>2.1.3-MOT-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath> ${project.basedir}/lib/Tips-2.1.3-MOT-SNAPSHOT.jar</systemPath>
         </dependency>
+
         <dependency>
             <groupId>net.easecation</groupId>
             <artifactId>Ghosty</artifactId>
             <version>B20240115-MOT-C1-JAVA8</version>
             <scope>provided</scope>
+            <!--            <systemPath> ${project.basedir}/lib/Ghosty-B20240115-MOT-C1.jar</systemPath>-->
         </dependency>
-        <dependency>
-            <groupId>cn.lanink</groupId>
-            <artifactId>MemoriesOfTime-GameCore</artifactId>
-            <version>1.6.12</version>
-            <scope>provided</scope>
-        </dependency>
+
 
     </dependencies>
 
@@ -110,11 +112,30 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib</classpathPrefix>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-path>.lib/[Tips前置(v1.2.7)]ScoreboardAPI-1.3.jar</Class-path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <encoding>${maven.compiler.encoding}</encoding>
                 </configuration>
             </plugin>
         </plugins>
